--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
 
   <link rel="icon" href="./favicon.png" />
-
+  <meta http-equiv="refresh" content="0; url=https://repo.github.io/Portfolio/public/index.html ">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
